welcome.lessons.welcome.methods.basics.Methods.scala.error
Methods:6: error: ')' expected but ';' found.
	     else prendBiscuit() ; (recule();recule();recule();recule();recule();recule();
                                            ^